--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evobot",
   "version": "0.10.0",
-  "description": "Discord music bot built with discord.js",
+  "description": "Discord built with discord.js",
   "main": "index.js",
   "author": "Erit Islami <eritislami@gmail.com>",
   "private": true,
@@ -23,7 +23,6 @@
     "simple-youtube-api": "^5.1.1",
     "soundcloud-downloader": "^0.2.3",
     "string-progressbar": "^1.0.4",
-    "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1"
   },
   "scripts": {
