--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "MTAwMTU1MTk5NzQ0MDM2ODcxMA.G6eAHS.IHi73DeKcncw6mdu6uok2Ja9Zub9m0Kg0CyaEY",
+"token": "MTAwMTU1ODE1ODg5ODExODcyOA.G84Kpn.A73u1A2CTwRquz6cUELd8-cFhqLeRrYj3I4zjg",
 "prefix": "#",
 "owner": [""]
 }
