--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ascii-table": "^0.0.9",
     "better-sqlite3": "^7.6.2",
     "canvacord": "^5.2.3",
+    "axios": "^0.25.0",
     "canvas": "^2.9.3",
     "cloudinary": "^1.28.1",
     "deepai": "^1.0.17",
