--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "MTAwMTU1ODE1ODg5ODExODcyOA.G84Kpn.A73u1A2CTwRquz6cUELd8-cFhqLeRrYj3I4zjg",
-"prefix": "#",
-"owner": [""]
+"token": "توكن حقكك هنا",
+"prefix": "بريفكس",
+"owner": ["id حسابك"]
 }
